# snow-lang

./: .gitmodules  LICENSE  README.md
cpptooling/: .gitignore  CMakeLists.txt
cpptooling/cmake/: asserts.cmake  genproj.py  log.cmake  pyutils.py  sourceGrouping.cmake
cpptooling/lexOld/: Lexer.cpp  Token.cpp  Type.hpp
cpptooling/src/: CMakeLists.txt
cpptooling/src-external/: CMakeLists.txt
cpptooling/src-test/: CMakeLists.txt  main.cpp
cpptooling/src-test/snowlib/diag/: DiagLoggerTests.cpp  PrinterTests.cpp
cpptooling/src-test/snowlib/src/: ModulePathTests.cpp  PackageModuleNameResolutionTests.cpp  SourceVaultTests.cpp
cpptooling/src-test/testHelpers/: TestFileSystem.cpp  TestFileSystem.hpp  TestLogHook.cpp  TestLogHook.hpp  TestVirtual.hpp
cpptooling/src-test/testHelpers/tests/: TestFileSystemTests.cpp
cpptooling/src-test/testInfra/: TestInfra.hpp  TestRunner.cpp  TestRunner.hpp
cpptooling/src/snowc/: CMakeLists.txt  main.cpp
cpptooling/src/snowlib/: CMakeLists.txt  ServiceLocator.hpp  SnowArgs.hpp  main.cpp  main.hpp  thing.cpp  thing.hpp
cpptooling/src/snowlib/ast/: BaseNode.hpp
cpptooling/src/snowlib/diag/: Desc.cpp  Desc.hpp  Diag.hpp  DiagLogger.cpp  DiagLogger.hpp  Printer.cpp  Printer.hpp  StageLevel.cpp  StageLevel.hpp  Type.hpp
cpptooling/src/snowlib/file/: Loc.cpp  Loc.hpp  SnowFile.cpp  SnowFile.hpp
cpptooling/src/snowlib/lex/: Context.cpp  Context.hpp  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  TokenType.hpp
cpptooling/src/snowlib/lex/TokenTypeInternal/: Desc.cpp  Desc.hpp  Type.hpp
cpptooling/src/snowlib/parse/: LiteralValue.cpp  LiteralValue.hpp
cpptooling/src/snowlib/parse/lex/: Lexer.cpp  Lexer.hpp  Token.hpp
cpptooling/src/snowlib/src/: Loc.hpp  Module.cpp  Module.hpp  ModulePath.cpp  ModulePath.hpp  Package.cpp  Package.hpp  Project.cpp  Project.hpp  SourceVault.cpp  SourceVault.hpp
docs/snow-lang-docs/: Clang Compiler Interesting Notes.md  Ticket Board.md  Tokens (implementation).md
docs/snow-lang-docs/.obsidian/: appearance.json  community-plugins.json  workspace.json
docs/snow-lang-docs/.obsidian/plugins/nl-syntax-highlighting/: data.json
docs/snow-lang-docs/.obsidian/plugins/obsidian-kanban/: data.json
docs/snow-lang-docs/Design/: V0.0.1 - Functions and Variables.md  V0.0.2 - Better Functions and Generics.md  V0.0.3 - Classes.md  V0.0.31 - Enums.md  V0.0.32 - Interfaces.md  V0.0.4 - Enums.md  V0.0.4 Unsafe and Memory Management.md  V0.0.5 - Interfaces.md  V0.0.5 - Threading and Closures.md  V0.0.6 - Modules and Packages and Files, Oh My!.md  V0.0.7 - Unsafe, Memory Management, The Std Library.md  V0.1.0 - Look Mom! I'm A Real Language!.md  V0.2.0 - Threading and Closures.md  Versions for After.md
docs/snow-lang-docs/Examples/: Advent of Code 2025 Day 1.md
docs/snow-lang-docs/Experimental/: Package and Project and Compilation.md
docs/snow-lang-docs/Tickets/: UTF8 Support.md
